tests/conformance/parse/invalid/reserved_match_as_binding.ks
// EXPECT: Expected ident
val match = 1
